RichTextArea: View and Model separation (draft)